--- a/blogpost.html
+++ b/blogpost.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Aqui vamos a hacer un blog del post</h1>
     <p>Este es el pparrafo de inicio.</p>
+    <p>Los blogs son la mejor forma de compartir información y tus ideas. 
+        Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres... por ahora
+    </p>
 </body>
 </html>
