--- a/blogpost.html
+++ b/blogpost.html
@@ -22,6 +22,9 @@
                 Suscribete y dale like.
             </p>
         </div>
+        <div id="footer">
+            Hecho con amor &#128154
+        </div>
     </div>
 
 </body>
