--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,11 @@
         <div id="post">
             <h1>Este es el título atractico e interesante del post</h1>
             <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas.</p>
+            <figcaption>
+                <figure >
+                    <img src="./imagenes/Imagen-page.webp" width="100%"> 
+                </figure>
+            </figcaption>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. 
                 Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres... por ahora
             </p>
